--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # If you change this file, please restart the server process.
 
 # Site settings
-title: Skylight - Digital Government Consultancy
+title: Skylight - Digital Government Consulting
 email: hello@skylight.digital
 description: >
   Skylight is a HUBZone digital consultancy focused
