--- a/_config.yml
+++ b/_config.yml
@@ -11,12 +11,18 @@ email: hello@skylight.digital
 description: >
   Skylight is a HUBZone digital consultancy focused
   on making government work in a digital world.
+
 baseurl: "" # the subpath of your site, e.g. /blog
 permalink: title
 url: "" # the base hostname & protocol for your site (https://skylight.digital)
 localhost: "localhost:4000"
+
 twitter_username:
 github_username: skylight-digital
+
+analytics:
+  google:
+    code: 'UA-93543424-1' # change this to your Google analytics code
 
 # Build settings
 markdown: kramdown
