--- a/_config.yml
+++ b/_config.yml
@@ -15,14 +15,21 @@ description: >
 baseurl: "" # the subpath of your site, e.g. /blog
 permalink: title
 url: "" # the base hostname & protocol for your site (https://skylight.digital)
-localhost: "localhost:4000"
+localhost: localhost:4000
+twitter_url: ""
+github_repo_url: ""
+github_issues_url: https://github.com/skylight-digital/skylight.digital/issues
+linkedin_url: ""
+openco_url: ""
 
-twitter_username:
-github_username: skylight-digital
+twitter:
+  username: ""
+github:
+  username: skylight-digital
 
 analytics:
   google:
-    code: 'UA-93543424-1' # change this to your Google analytics code
+    code: UA-93543424-1 # change this to your Google analytics code
 
 # Build settings
 markdown: kramdown
