--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github:
 
 analytics:
   google:
-    code: UA-93543424-1 # change this to your Google analytics code
+    code: 'UA-93543424-1' # change this to your Google analytics code
 
 # Build settings
 markdown: kramdown
