--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ analytics:
 # Build settings
 markdown: kramdown
 
+kramdown:
+  auto_ids: false
+
 collections:
   service_areas:
     output: true
