change design of industry info items...misc fixes...add/update social media links

--- a/_config.yml
+++ b/_config.yml
@@ -17,15 +17,17 @@ permalink: /:title/
 url: https://skylight.digital
 localhost: localhost:4000
 twitter_url: https://twitter.com/skylight_hq
-github_repo_url: https://github.com/skylight-digital
-github_issues_url: https://github.com/skylight-digital/skylight.digital/issues
+github_repo_url: https://github.com/skylight-hq
+github_issues_url: https://github.com/skylight-hq/skylight.digital/issues
 linkedin_url: ""
 openco_url: ""
+hackerone_url: https://hackerone.com/skylight_qgvpb
+slack_invite_url: https://skylight-hq.slack.com/signup
 
 twitter:
   username: skylight_hq
 github:
-  username: skylight-digital
+  username: skylight-hq
 
 analytics:
   google:
