filter project work by individual

--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,9 @@ collections:
   projects:
     output: true
     permalink: /work/:path/
+  project_team_members:
+    output: true
+    permalink: /work/team-member/:name
 
 sass:
   style: compressed
