--- a/_data/team.yml
+++ b/_data/team.yml
@@ -36,19 +36,19 @@
       fa_icon_name: home
   contributions:
     - name: Blog Posts
-      link: /blog/sean-johnson/
+      link: /blog/author/sean-johnson/
       link_description: Sean's Blog Posts
       fa_icon_name: pencil-square
     - name: Projects
-      link: /work/sean-johnson/
+      link: /work/team-member/sean-johnson/
       link_description: Sean's Project Work
       fa_icon_name: tasks
     - name: Guilds
-      link: /guilds/sean-johnson/
+      link: /guilds/member/sean-johnson/
       link_description: Sean's Guilds
       fa_icon_name: users
     - name: Guides
-      link: /guides/sean-johnson/
+      link: /guides/author/sean-johnson/
       link_description: Sean's Guides
       fa_icon_name: map
 - name: sean-johnson
@@ -89,19 +89,19 @@
       fa_icon_name: home
   contributions:
     - name: Blog Posts
-      link: /blog/sean-johnson/
+      link: /blog/author/sean-johnson/
       link_description: Sean's Blog Posts
       fa_icon_name: pencil-square
     - name: Projects
-      link: /work/sean-johnson/
+      link: /work/team-member/sean-johnson/
       link_description: Sean's Project Work
       fa_icon_name: tasks
     - name: Guilds
-      link: /guilds/sean-johnson/
+      link: /guilds/member/sean-johnson/
       link_description: Sean's Guilds
       fa_icon_name: users
     - name: Guides
-      link: /guides/sean-johnson/
+      link: /guides/author/sean-johnson/
       link_description: Sean's Guides
       fa_icon_name: map
 - name: sean-johnson
@@ -142,19 +142,19 @@
       fa_icon_name: home
   contributions:
     - name: Blog Posts
-      link: /blog/sean-johnson/
+      link: /blog/author/sean-johnson/
       link_description: Sean's Blog Posts
       fa_icon_name: pencil-square
     - name: Projects
-      link: /work/sean-johnson/
+      link: /work/team-member/sean-johnson/
       link_description: Sean's Project Work
       fa_icon_name: tasks
     - name: Guilds
-      link: /guilds/sean-johnson/
+      link: /guilds/member/sean-johnson/
       link_description: Sean's Guilds
       fa_icon_name: users
     - name: Guides
-      link: /guides/sean-johnson/
+      link: /guides/author/sean-johnson/
       link_description: Sean's Guides
       fa_icon_name: map
 - name: sean-johnson
@@ -195,19 +195,19 @@
       fa_icon_name: home
   contributions:
     - name: Blog Posts
-      link: /blog/sean-johnson/
+      link: /blog/author/sean-johnson/
       link_description: Sean's Blog Posts
       fa_icon_name: pencil-square
     - name: Projects
-      link: /work/sean-johnson/
+      link: /work/team-member/sean-johnson/
       link_description: Sean's Project Work
       fa_icon_name: tasks
     - name: Guilds
-      link: /guilds/sean-johnson/
+      link: /guilds/member/sean-johnson/
       link_description: Sean's Guilds
       fa_icon_name: users
     - name: Guides
-      link: /guides/sean-johnson/
+      link: /guides/author/sean-johnson/
       link_description: Sean's Guides
       fa_icon_name: map
 - name: sean-johnson
@@ -248,19 +248,19 @@
       fa_icon_name: home
   contributions:
     - name: Blog Posts
-      link: /blog/sean-johnson/
+      link: /blog/author/sean-johnson/
       link_description: Sean's Blog Posts
       fa_icon_name: pencil-square
     - name: Projects
-      link: /work/sean-johnson/
+      link: /work/team-member/sean-johnson/
       link_description: Sean's Project Work
       fa_icon_name: tasks
     - name: Guilds
-      link: /guilds/sean-johnson/
+      link: /guilds/member/sean-johnson/
       link_description: Sean's Guilds
       fa_icon_name: users
     - name: Guides
-      link: /guides/sean-johnson/
+      link: /guides/author/sean-johnson/
       link_description: Sean's Guides
       fa_icon_name: map
 - name: sean-johnson
@@ -301,19 +301,19 @@
       fa_icon_name: home
   contributions:
     - name: Blog Posts
-      link: /blog/sean-johnson/
+      link: /blog/author/sean-johnson/
       link_description: Sean's Blog Posts
       fa_icon_name: pencil-square
     - name: Projects
-      link: /work/sean-johnson/
+      link: /work/team-member/sean-johnson/
       link_description: Sean's Project Work
       fa_icon_name: tasks
     - name: Guilds
-      link: /guilds/sean-johnson/
+      link: /guilds/member/sean-johnson/
       link_description: Sean's Guilds
       fa_icon_name: users
     - name: Guides
-      link: /guides/sean-johnson/
+      link: /guides/author/sean-johnson/
       link_description: Sean's Guides
       fa_icon_name: map
 - name: sean-johnson
@@ -354,19 +354,19 @@
       fa_icon_name: home
   contributions:
     - name: Blog Posts
-      link: /blog/sean-johnson/
+      link: /blog/author/sean-johnson/
       link_description: Sean's Blog Posts
       fa_icon_name: pencil-square
     - name: Projects
-      link: /work/sean-johnson/
+      link: /work/team-member/sean-johnson/
       link_description: Sean's Project Work
       fa_icon_name: tasks
     - name: Guilds
-      link: /guilds/sean-johnson/
+      link: /guilds/member/sean-johnson/
       link_description: Sean's Guilds
       fa_icon_name: users
     - name: Guides
-      link: /guides/sean-johnson/
+      link: /guides/author/sean-johnson/
       link_description: Sean's Guides
       fa_icon_name: map
 - name: sean-johnson
@@ -407,18 +407,18 @@
       fa_icon_name: home
   contributions:
     - name: Blog Posts
-      link: /blog/sean-johnson/
+      link: /blog/author/sean-johnson/
       link_description: Sean's Blog Posts
       fa_icon_name: pencil-square
     - name: Projects
-      link: /work/sean-johnson/
+      link: /work/team-member/sean-johnson/
       link_description: Sean's Project Work
       fa_icon_name: tasks
     - name: Guilds
-      link: /guilds/sean-johnson/
+      link: /guilds/member/sean-johnson/
       link_description: Sean's Guilds
       fa_icon_name: users
     - name: Guides
-      link: /guides/sean-johnson/
+      link: /guides/author/sean-johnson/
       link_description: Sean's Guides
       fa_icon_name: map
