remove all guides related code (for now)

--- a/_data/values.yml
+++ b/_data/values.yml
@@ -21,7 +21,7 @@
   statement: >
     We believe a culture of development not only promotes star formation, but also
     contributes to the overall strength of the organization. Development activities
-    (for example, coaching, guilds, and peer mentoring) are woven into the normal, day-to-day operations.
+    (for example, coaching and peer mentoring) are woven into the normal, day-to-day operations.
   order: 40
 - title: Design an engaging employee experience.
   statement: >
